data/derived/sp14/progs/unify/prog0990.ml.out
Characters 79-80:
  wwhile (if f b = b then (f b, false) else failwith "asd" ,b);;
                                                            ^
Error: This expression has type bool -> bool * bool
       but an expression was expected of type bool
